# investor

./: .env.example  .gitignore  ADVISOR.md  AGENTS.md  IDEAS.md  Makefile  README.md  README_ES.md  app.py  code-review.md  explicabilidad.py  productos.py  pyproject.toml  queries.py  recommendador.py  renderers.py  requirements.txt  simulacion.py  vars.py
src/: app.py  explicabilidad.py  productos.py  queries.py  recommendador.py  renderers.py  simulacion.py  vars.py
tests/: conftest.py  test_app.py  test_explicabilidad.py  test_productos.py  test_queries.py  test_recommendador.py  test_renderers.py  test_renderers_integration.py  test_simulacion.py
