[project]
name = "investor"
version = "0.1.0"
description = "Streamlit app for exploring MyInvestor investment products with MIX advisor"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "pandas",
    "duckdb",
    "dotenv",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["src/__init__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 60
